--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -22,5 +22,9 @@ jobs:
     - name: Format code
       run: |
         make format
+    -name: Build Container
+      run: |
+        make build
+
     
     
